--- a/survey-form/survey.html
+++ b/survey-form/survey.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
         <title>Survey Form Project done by Daniel and Prasanta</title>
+        <link rel="stylesheet" href="/survey-form/css/styles.css">
     </head>
     <body>
+        <main>
         <h1 id="title">First project development</h1>
         <p id="description">This is a Survey Form to collect user data</p>
         <form id="survey-form">
@@ -20,17 +23,43 @@
                 <input id="number" type="number" placeholder="Enter your Age" min="18" max="45"/>
             </div>
             <div>
+                <label id="dropdown">Which continent do you come from?</label>
                 <select id="dropdown">
-                    <option >1</option>
-                    <option >2</option>
+                    <option >Europe</option>
+                    <option >Asia</option>
                 </select>
             </div>
             <div>
-                <label id="Yes"></label> 
-                
-                <input type="radio" />
+                <p>Did you enjoy the service?</p>
+                <label id="Yes"><input type="radio" name="recommend"/>Yes</label>
+                <label id="No"><input type="radio" name="recommend"/>No</label>
+
             </div>
+            <div>
+                <p>What do you like?</p>
+                <label id="banana">
+                    <input type="checkbox" value="banana">Banana
+                </label>
+                <label id="grapes">
+                    <input type="checkbox" value="grapes">Grapes
+                </label>
+                <label id="Apple">
+                    <input type="checkbox" value="apple">Apple
+                </label>
+                <label id="mango">
+                    <input type="checkbox" value="mango">Mango
+                </label>
+                <label id="orange">
+                    <input type="checkbox" value="orange">Orange
+                </label>
+            <div>
+                <label id="comments">Any other comments or suggetions</label>
+                <textarea id="comments" placeholder="Enter your comment here"></textarea>
+            </div>
+            
+
             <input type="submit" />
         </form>
+    </main>
     </body>
 </html>
